# OnelinerProject

./: .gitignore  PLANS.md  gentest.py  main (5).py  main.py  main_5.py  main_phone.py  pyproject.toml  tbb2uaq1lceep6eg.py  test.py  test2.py  test_code.py  todos.txt  uhoh.py  utils.py
src/: uhoh.py
src/onelinerproject/: main.py  utils.py
src/onelinerproject/transforms/: __init__.py  assignments.py  basic.py  class_.py  functions.py  imports.py  literals.py  logic.py  operators.py
transforms/: __init__.py  assignments.py  basic.py  class_.py  functions.py  imports.py  literals.py  logic.py  operators.py
